# magnet_controller

./: CMakeLists.txt  magnet_contoroller_launch.py  package.xml
src/: magnet_control_gui.cpp  magnet_controller.cpp
